# modbus-client

./: Cargo.toml
examples/: rtu_client.rs
src/: lib.rs
src/codec/: decoder.rs  encoder.rs  mod.rs
